NetBSD Problem Report #57225

From www@netbsd.org  Sun Feb 12 17:46:49 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B16351A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 12 Feb 2023 17:46:49 +0000 (UTC)
Message-Id: <20230212174648.6B37D1A923A@mollari.NetBSD.org>
Date: Sun, 12 Feb 2023 17:46:48 +0000 (UTC)
From: armihu@gmail.com
Reply-To: armihu@gmail.com
To: gnats-bugs@NetBSD.org
Subject: fault during boot in igpio_acpi_attach
X-Send-Pr-Version: www-1.0

>Number:         57225
>Category:       port-amd64
>Synopsis:       fault during boot in igpio_acpi_attach
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 12 17:50:00 +0000 2023
>Closed-Date:    Mon Mar 13 00:16:32 +0000 2023
>Last-Modified:  Mon Mar 13 00:16:32 +0000 2023
>Originator:     Arto Huusko
>Release:        10.99.2
>Organization:
>Environment:
>Description:
Booting generic kernel 10.99.2 from 2022-02-13 on Acer Aspire E11 fails with (transcribed by hand)

uvm_fault(..., ..., 1) -> e
fatal page fault in supervisor mode
trap type 6 code 0 rip ... es 0x8 rflags 0x10202 or2 .... ilevel 0x8 rsp ....
curlwp
kernel: page fault trap, code=0
stopped in pid 0.0 (system) at netbsd:bus_space_read_4+0x8: movl 0(%rdx), %eax
bus_space_read_4
igpio_acpi_attach at netbsd:igpio_acpi_attach+0x18d
config_attach_internal
config_found
acpi_rescan
acpi_attach
config_attach_internal
config_found
amd64_mainbus_attach


value of rdx 0xffff988120830000
rax ffffd3d5e860a180


>How-To-Repeat:
Boot 10.99.2/amd64 on Aspire E11.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-amd64-maintainer->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Fri, 24 Feb 2023 10:35:32 +0000
Responsible-Changed-Why:
take.


State-Changed-From-To: open->feedback
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 27 Feb 2023 15:44:46 +0000
State-Changed-Why:
Could you test the latest -current(igpio_acpi.c rev. 1.2)?


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57225 CVS commit: src
Date: Mon, 27 Feb 2023 15:41:41 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Mon Feb 27 15:41:41 UTC 2023

 Modified Files:
 	src/share/man/man4: igpio.4
 	src/sys/dev/acpi: igpio_acpi.c

 Log Message:
 igpio(4): Disable Baytrail and Lynxpoint support. Fixes PR kern/57225.

  It seems additional code is required to support Baytrail and Lynxpoint.
 Disable those support.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/share/man/man4/igpio.4
 cvs rdiff -u -r1.1 -r1.2 src/sys/dev/acpi/igpio_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Arto Huusko <armihu@gmail.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-amd64/57225 (fault during boot in igpio_acpi_attach)
Date: Mon, 6 Mar 2023 14:02:09 +0200

 Kernel boots now without panic. Thank you.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57225 CVS commit: [netbsd-10] src
Date: Sun, 12 Mar 2023 17:52:13 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Mar 12 17:52:13 UTC 2023

 Modified Files:
 	src/share/man/man4 [netbsd-10]: igpio.4
 	src/sys/dev/acpi [netbsd-10]: igpio_acpi.c

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #116):

 	sys/dev/acpi/igpio_acpi.c: revision 1.2
 	share/man/man4/igpio.4: revision 1.4

 igpio(4): Disable Baytrail and Lynxpoint support. Fixes PR kern/57225.
  It seems additional code is required to support Baytrail and Lynxpoint.

 Disable those support.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2.2.1 -r1.2.2.2 src/share/man/man4/igpio.4
 cvs rdiff -u -r1.1 -r1.1.4.1 src/sys/dev/acpi/igpio_acpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 13 Mar 2023 00:16:32 +0000
State-Changed-Why:
Fixed. Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.