igpio(4): Disable Baytrail and Lynxpoint support. Fixes PR kern/57225.

It seems additional code is required to support Baytrail and Lynxpoint.
Disable those support.